Implement DB structure based on WalletDB_firstversion.png

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,13 @@
-# ===============================
-# = JPA / HIBERNATE
-# ===============================
+# Hibernate ddl auto (create, create-drop, update)
 # none  = this is the default for MySql, no change the database structure.
 spring.jpa.hibernate.ddl-auto=create
+
+# Connection url for the database "walletDB"
 spring.datasource.url=jdbc:mysql://localhost:3306/walletDB
+
+# Username and password
 spring.datasource.username=root
 spring.datasource.password=root
+
+# Allows Hibernate to generate SQL optimized for a particular DBMS
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
