--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,8 @@ spring.datasource.password=root
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
+spring.datasource.initialization-mode=always
+
 spring.thymeleaf.prefix=file:src/main/resources/templates/
 
 spring.thymeleaf.cache=false
